--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "node-test",
+  "name": "python-test",
   "version": "0.0.1",
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+    "python": "2.7.x",
   }
 }
